--- a/website2024/package.json
+++ b/website2024/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
     "tailwind-merge": "^2.2.2",
     "tw-elements-react": "^1.0.0-alpha2"
